website/websites/u32q/code/knucleotide.3.scala.log

Sun, 31 Aug 2008 01:20:34 GMT

MAKE:
mv knucleotide.scala-3.scala knucleotide.scala
/usr/local/src/scala-2.7.2.RC1/bin/scalac -optimise knucleotide.scala
knucleotide.scala:97: error: type mismatch;
 found   : scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
 required: HashBag.this.Entry
         if (elemEquals(entryKey(bucket), elem)){
                                 ^
knucleotide.scala:98: error: value inc is not a member of scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
            bucket.inc
                   ^
knucleotide.scala:109: error: type mismatch;
 found   : scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
 required: HashBag.this.Entry
         if (elemEquals(entryKey(bucket), elem)){
                                 ^
knucleotide.scala:110: error: value value is not a member of scala.collection.mutable.HashEntry[A,HashBag.this.Entry]
            return bucket.value
                          ^
four errors found
make: [knucleotide.scala-3.scala_run] Error 1 (ignored)

COMMAND LINE:
 /usr/local/src/scala-2.7.2.RC1/bin/scala -howtorun object knucleotide 0 < knucleotide-input50000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:
java.lang.ClassNotFoundException: knucleotide
